...
    ) {
        item {
            OutlinedTextField(
                value = state.query,
                onValueChange = onQueryChanged,
                modifier = Modifier.fillMaxWidth(),
                label = { Text("Search History") },
                singleLine = true,
            )
        }

        state.message?.let { message ->
            item {
...
